# csc1029-assesment2-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/csc/: Command.hpp  Console.hpp  ImageAlbum.hpp  ImageManager.hpp  ImageRecord.hpp  OptionPack.hpp  RequiredImages.hpp  UserInterface.hpp  core.h  date.hpp
src/: Command.cpp  Console.cpp  ImageRecord.cpp  QUBImages.cpp  QUBMediaImages.cpp  RequiredImages.cpp  UserInterface.cpp  main.cpp
